--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/landing_page.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/about.css') }}">
 
+    <script src="{{ url_for('static', filename='js/cookie.js') }}"></script>
+
     <link rel="manifest" href="/static/manifest.json">
 
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -136,6 +138,14 @@
                     <li><a class="text-muted" href="{{ url_for('support.privacy') }}">Privacy</a></li>
                 </ul>
             </div>
+        </div>
+         <div class="alert alert-warning alert-dismissible d-none" role="alert" id="cookie_banner">
+            <strong>This site uses cookies.</strong> By continuing to use this site, you accept its use of cookies as
+            described in our <a class="btn-link" href="{{ url_for('support.cookies') }}">cookie policy</a>.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close cookie banner"
+                    id="cookie_accept">
+                <span area-hidden="true">&times;</span>
+            </button>
         </div>
     </footer>
 </div>
